envoy/front-proxy/envoy.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address:
      protocol: TCP
      address: 0.0.0.0
      port_value: 9901
static_resources:
  listeners:
  - name: envoy-front-proxy-http-listener
    address:
      socket_address:
        protocol: TCP
        address: 0.0.0.0
        port_value: 80
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
          codec_type: AUTO
          stat_prefix: ingress_http
          route_config:
            name: front-proxy-http-route
            virtual_hosts:
            - name: front-proxy-http-route
              domains: ["*"]
              routes:
              - match:
                  prefix: "/"
                redirect:
                  port_redirect: 443
                  https_redirect: true
                # route:
                #   cluster: envoy-sidecar-a
          http_filters:
          - name: envoy.router
            typed_config: {}
  - name: envoy-front-proxy-https-listener
    address:
      socket_address:
        protocol: TCP
        address: 0.0.0.0
        port_value: 443
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
          codec_type: AUTO
          stat_prefix: ingress_http
          route_config:
            name: "front-proxy-https-route"
            virtual_hosts:
            - name: "front-proxy-https-route"
              domains: ["*"]
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: envoy-sidecar-a
                  timeout: 180s
          http_filters:
          - name: envoy.router
            typed_config: {}
      tls_context:
        common_tls_context:
          tls_certificates:
            - certificate_chain:
                filename: "/etc/localhost+4.pem"
              private_key:
                filename: "/etc/localhost+4-key.pem"

  clusters:
  # Instruct Envoy to continouously resolve DNS of http://<host>:<port> asynchronously
  - name: envoy-sidecar-a
    connect_timeout: 0.25s
    type: strict_dns
    # Comment out the following line to test on v6 networks
    dns_lookup_family: V4_ONLY
    lb_policy: round_robin
    http2_protocol_options: {}
    hosts:
      - socket_address:
          address: envoy-sidecar-a
          port_value: 8786
